fixed horizontal overflow of rotated divs by adding overflow-x:hidden to body

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -53,6 +53,7 @@
 html,
 body {
     scrollbar-width: none;
+    overflow-x: hidden;
 }
 
 ::-webkit-scrollbar {
